styling and counter animation for money label

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
     <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin />
     <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js" crossorigin />
     <script src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri&display=swap" rel="stylesheet">
     <script>var Alert = ReactBootstrap.Alert;</script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
